tests/fixtures/invalid/key-no-eol.stderr
TOML parse error at line 1, column 7
  |
1 | a = 1 b = 2
  |       ^
Unexpected `b`
Expected newline or end of input
